--- a/jobpy/config/settings.yaml
+++ b/jobpy/config/settings.yaml
@@ -1,16 +1,9 @@
 # All paths are relative to this file.
 
 # Paths.
-data_path:        'data'
-master_list_path: 'data/master_list.csv'
+output_path: 'search'
 
 # Filters.
-filter_list_path: 'data/filter_list.pickle'
-
-black_list:
-  - 'Infox Consulting'
-  - 'Terminal'
-
 search_terms:
   region:
     province: 'ON'
@@ -21,7 +14,9 @@ search_terms:
   keywords:
     - 'Python'
 
-# Logging.
-log_path:  'data/jobpy.log'
+black_list:
+  - 'Infox Consulting'
+  - 'Terminal'
+
 # Logging level options are: critical, error, warning, info, debug, notset
 log_level: 'error'
