integrated new settings into the project

--- a/jobpy/config/settings.yaml
+++ b/jobpy/config/settings.yaml
@@ -3,6 +3,12 @@
 # Paths.
 output_path: 'search'
 
+# Providers from which to search
+providers:
+  - 'Indeed'
+  - 'Monster'
+  - 'GlassDoor'
+
 # Filters.
 search_terms:
   region:
