Weird functionality happening with multiprocessing.Pool().

--- a/demo/settings.yaml
+++ b/demo/settings.yaml
@@ -7,8 +7,8 @@ output_path: './'
 # Providers from which to search (case insensitive)
 # use indeed only for speed
 providers:
-  - 'Indeed'
-  - 'Monster'
+#  - 'Indeed'
+#  - 'Monster'
   - 'GlassDoor' # This takes ~10x longer to run than the other providers
 
 # Filters.
