Revert "trying pipenv run"
This reverts commit fdb3326dba536a9fcf57eb83771381e6137ca843.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ python:
 install:
   - 'pip install pipenv'
   - 'pipenv sync'
-script: 'pipenv run python -m jobfunnel -s demo/settings.yaml -o demo/'
+script: 'python -m jobfunnel -s demo/settings.yaml -o demo/'
