Quick fix for new id_filter
- No longer crashes if there is no master_list.csv yet.

--- a/demo/settings.yaml
+++ b/demo/settings.yaml
@@ -8,8 +8,8 @@ output_path: './'
 # use indeed only for speed
 providers:
   - 'Indeed'
-  - 'Monster'
-  - 'GlassDoor' # This takes ~10x longer to run than the other providers
+#  - 'Monster'
+#  - 'GlassDoor' # This takes ~10x longer to run than the other providers
 
 # Filters.
 search_terms:
