Light clean up and fixes
- Small fix on glassdoor class for scraping search page
- Removed unneeded imports
- Converted some more for loops to list comprehensions
- Added an entry to gitignore
- Miscellaneous

--- a/.gitignore
+++ b/.gitignore
@@ -113,6 +113,7 @@ dmypy.json
 .idea/workspace.xml
 .idea/usage.statistics.xml
 .idea/tasks.xml
+.idea/inspectionProfiles
 
 # Pyre type checker
 .pyre/
