--- a/jobfunnel/config/settings.yaml
+++ b/jobfunnel/config/settings.yaml
@@ -28,3 +28,6 @@ black_list:
 
 # Logging level options are: critical, error, warning, info, debug, notset
 log_level: 'info'
+
+# Save duplicates removed by tfidf filter to a separate csv
+save_duplicates: 'False'
