Fixed duplicate saver and re-did configs
- Duplicate saver is fixed and completely working
- Also downgraded requirements for nltk and made a new Pipfile.lock

--- a/jobfunnel/config/settings.yaml
+++ b/jobfunnel/config/settings.yaml
@@ -30,4 +30,5 @@ black_list:
 log_level: 'info'
 
 # Save duplicates removed by tfidf filter to a separate csv
-save_duplicates: 'False'
+# Options include True or False witout single quotes
+save_duplicates: False
