Updated multi-threading and optimized stuff
- Changed some imports to reduce look-ups whenever module functions are called a lot
- Swapped threading module with concurrent.futures
- Data filtering now takes a list and initializes regex within module instead of being passed the reference
- Sprucing things up here and there

--- a/demo/settings.yaml
+++ b/demo/settings.yaml
@@ -6,11 +6,10 @@ output_path: './'
 
 
 # Providers from which to search (case insensitive)
-# use indeed only for speed
 providers:
-#  - 'Indeed'
-#  - 'Monster'
-  - 'GlassDoor' # This takes ~10x longer to run than the other providers
+  #- 'Indeed'
+  #- 'Monster'
+  - 'GlassDoor' # This used to take ~10x longer to run than the other providers
 
 # Filters.
 search_terms:
