Converted some redundant functions into super classes
- Added a pre-filter function that runs the id_filter, and other filters to reduce amount of urls to scrape for blurbs
- Added a delay_threader function that is called when delaying is turned on, which does all the work to delay and thread the requests
- Fixed quick bug, where only first page of search results was grabbed from glassdoor

--- a/demo/settings.yaml
+++ b/demo/settings.yaml
@@ -7,8 +7,8 @@ output_path: './'
 
 # Providers from which to search (case insensitive)
 providers:
-  - 'Indeed'
-  - 'Monster'
+  #- 'Indeed'
+  #- 'Monster'
   - 'GlassDoor' # This used to take ~10x longer to run than the other providers
 
 # Filters.
@@ -23,7 +23,7 @@ search_terms:
   keywords:
     - 'Python'
     - 'Java'
-    #- 'Git'
+    - 'Git'
     - 'Unix'
 
 ## Do later, and adjust for Monster
