Major cleanup for sake of readability and functionality update
- Added comments to a lot of places and move some things around
- Stored region dictionary values into local variables which should help reduce lookup load in loops
- Renamed a few variables, and ensured consistency between variable names throughout classes
- Traded unneeded list comprehensions 
- Replaced most str.format() usages with f-strings which should also give a little speed boost
- Checked for consistent line spacing
- Some proactive bug fixing
- Delay scraping reports time spent scraping
- Added converging random delay, which uses delay as and upper bound and delay times calculated by an equation as lower bounds for choosing random values
- Hard delay now subtracts small offsets for the 2nd to 8th scrape jobs, so our threads don't all start at the same time
- Time for blurb retrieval is printed out

--- a/demo/settings.yaml
+++ b/demo/settings.yaml
@@ -8,8 +8,8 @@ output_path: './'
 # Providers from which to search (case insensitive)
 providers:
   - 'Indeed'
-  #- 'Monster'
-  #- 'GlassDoor' # This used to take ~10x longer to run than the other providers
+  - 'Monster'
+  - 'GlassDoor' # This used to take ~10x longer to run than the other providers
 
 # Filters.
 search_terms:
@@ -23,8 +23,8 @@ search_terms:
   keywords:
     - 'Python'
     - 'Java'
-    - 'Git'
-    #- 'Unix'
+    #- 'Git'
+    - 'Unix'
 
 ## Do later, and adjust for Monster
 #  experience_level: 
@@ -47,9 +47,10 @@ save_duplicates: False
 # Delaying config
 set_delay: True # False or True
 delay_config:
-    equation: 'linear' # Hard, Linear, Sigmoid
+    equation: 'hard' # Hard, Linear, Sigmoid
     delay: 5 # Defines upper bound/max delay
     lower_bound: 0 # Delay lower bound/min delay
-    random: False # Switch for random delaying
+    random: True # Switch for random delaying
+    converge: True # Switch for using converging random or not, only used if random is specified
     
     
