--- a/demo/settings.yaml
+++ b/demo/settings.yaml
@@ -7,7 +7,7 @@ output_path: './'
 # Providers from which to search (case insensitive)
 providers:
   - 'Indeed'
-  #- 'Monster'
+  - 'Monster'
   - 'GlassDoor' # This used to take ~10x longer to run than the other providers
 
 # Filters.
@@ -21,7 +21,7 @@ search_terms:
   keywords:
     - 'Python'
     - 'Java'
-    - 'Git'
+    #- 'Git'
     - 'Unix'
 
 black_list:
