--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 python:
   - '3.6'
 install:
-  - 'pip install pipenv'
+  - 'pip install flake8 pipenv'
   - 'pipenv sync'
+before_script: 'flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics'
 script: 'python -m jobfunnel -s demo/settings.yaml -o demo/'
