--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,8 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-jobfunnel = {editable = true,path = "."}
-nltk = "*"
+jobfunnel = {path = ".",editable = true}
+nltk = "==3.4.5"
 
 [requires]
 python_version = "3.6"
