--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ install:
   - 'pip install pipenv'
   - 'pipenv sync'
   - 'python -m nltk.downloader stopwords'
-script: 'python -m jobfunnel -s demo/settings.yaml -o demo/'
+script:
+  - 'python -m jobfunnel -s demo/settings.yaml -o demo/'
+  - 'pytest'
