--- a/jobfunnel/config/settings.yaml
+++ b/jobfunnel/config/settings.yaml
@@ -29,6 +29,15 @@ black_list:
 # logging level options are: critical, error, warning, info, debug, notset
 log_level: 'info'
 
+# keep similar job postings
+similar: False
+
+# skip web-scraping and load a previously saved daily scrape pickle
+no_scrape: False
+
+# recover master-list by accessing all historic scrapes pickles
+recover: False
+
 # saves duplicates removed by tfidf filter to duplicate_list.csv
 save_duplicates: False
 
@@ -40,9 +49,9 @@ delay_config:
     # functions used for delaying algorithm, options are: constant, linear, sigmoid
     function: 'linear'
     # maximum delay/upper bound for converging random delay
-    delay: 10
+    delay: 10.0
     # minimum delay/lower bound for random delay
-    min_delay: 1
+    min_delay: 1.0
     # random delay
     random: False
     # converging random delay, only used if 'random' is set to True
