New date_filter

--- a/jobfunnel/config/settings.yaml
+++ b/jobfunnel/config/settings.yaml
@@ -29,6 +29,9 @@ black_list:
 # logging level options are: critical, error, warning, info, debug, notset
 log_level: 'info'
 
+# The oldest number of days a job can be. To disbable this option set value to -1
+threshold_days: 10
+
 # keep similar job postings
 similar: False
 
