Adressed PR review - As of now, the default value for threshold_days is 20. This is temptative, as we wait for community feedback on a consensus for this value. - Removed extra empty lines and unnecessary comments. - All dates used inside date_filter are formatted with the ISO standard format provided by the datetime module. - Filtered jobs by date_filter are logged at the "info" level.

--- a/demo/settings.yaml
+++ b/demo/settings.yaml
@@ -27,8 +27,8 @@ black_list:
 # logging level options are: critical, error, warning, info, debug, notset
 log_level: 'info'
 
-# The oldest number of days a job can be. To disbable this option set value to -1
-threshold_days: 10
+# The oldest number of days a job can be. To disable this option set value to -1
+threshold_days: 20
 
 # saves duplicates removed by tfidf filter to duplicate_list.csv
 save_duplicates: False
