--- a/jobfunnel/config/settings.yaml
+++ b/jobfunnel/config/settings.yaml
@@ -30,6 +30,7 @@ black_list:
 log_level: 'info'
 
 # The oldest number of days a job can be. To disable this option set value to -1
+#TODO make this a CLI option so it can be optional
 threshold_days: 20
 
 # keep similar job postings
