working on test_validate: -tests for validating delay and min_delay -tests for validating providers -tests for validating max_listing_days -tests for validating paths -tests for validating region -tests for validating domain

--- a/demo/settings.yaml
+++ b/demo/settings.yaml
@@ -14,7 +14,7 @@ search_terms:
   region:
     province: 'ON'
     city:     'waterloo'
-    domain:   'ca'
+    domain:   
     radius:   10
 
   keywords:
