--- a/demo/settings.yaml
+++ b/demo/settings.yaml
@@ -14,7 +14,7 @@ search_terms:
   region:
     province: 'ON'
     city:     'waterloo'
-    domain:   
+    domain:   'ca'
     radius:   10
 
   keywords:
