--- a/demo/settings.yaml
+++ b/demo/settings.yaml
@@ -5,9 +5,9 @@ output_path: './'
 
 # providers from which to search (case insensitive)
 providers:
-  # - 'Indeed'
+  - 'Indeed'
   - 'Monster'
-  # - 'GlassDoor'
+  - 'GlassDoor'
 
 # filters
 search_terms:
