--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,5 @@ before_script: 'flake8 . --count --select=E9,F63,F7,F82 --show-source --statisti
 script:
   - 'python -m jobfunnel -s demo/settings.yaml -o demo/'
   - 'pytest --cov --cov-report=xml jobfunnel'
+after_success:
+  - 'bash <(curl -s https://codecov.io/bash)'
