--- a/demo/settings.yaml
+++ b/demo/settings.yaml
@@ -5,8 +5,8 @@ output_path: './'
 
 # providers from which to search (case insensitive)
 providers:
-  - 'Indeed'
-  - 'Monster'
+  # - 'Indeed'
+  # - 'Monster'
   - 'GlassDoor'
 
 # filters
