-Updated documentation -Glassdoor has been commented out in settings files for the time being -Added webdriver_manager dependency to TravsCI file

--- a/demo/settings.yaml
+++ b/demo/settings.yaml
@@ -5,9 +5,9 @@ output_path: './'
 
 # providers from which to search (case insensitive)
 providers:
-  # - 'Indeed'
-  # - 'Monster'
-  - 'GlassDoor'
+        #- 'GlassDoor' 
+  - 'Indeed'
+  - 'Monster'
 
 # filters
 search_terms:
