--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ verify_ssl = true
 [packages]
 jobfunnel = {path = ".",editable = true}
 selenium = "*"
+webdriver_manager = "*"
 
 [requires]
 python_version = "3.6"
