-TODO:Investigate flaky test appraoch for glassdoor testing

--- a/demo/settings.yaml
+++ b/demo/settings.yaml
@@ -5,7 +5,7 @@ output_path: './'
 
 # providers from which to search (case insensitive)
 providers:
-        #- 'GlassDoor' 
+  - 'GlassDoor' 
   - 'Indeed'
   - 'Monster'
 
