--- a/demo/settings.yaml
+++ b/demo/settings.yaml
@@ -5,9 +5,9 @@ output_path: './'
 
 # providers from which to search (case insensitive)
 providers:
-  - 'GlassDoor' 
+        #- 'GlassDoor' 
   - 'Indeed'
-  - 'Monster'
+    #- 'Monster'
 
 # filters
 search_terms:
