Fixed issues mentioned in pull requests

--- a/jobfunnel/config/settings.yaml
+++ b/jobfunnel/config/settings.yaml
@@ -9,7 +9,8 @@ output_path: 'search'
 providers:
   - 'Indeed'
   - 'Monster'
-  # - 'GlassDoor'
+  # - 'GlassDoorDynamic'
+  - 'GlassDoorStatic'
 
 # filters
 search_terms:
