--- a/demo/settings.yaml
+++ b/demo/settings.yaml
@@ -5,9 +5,11 @@ output_path: './'
 
 # providers from which to search (case insensitive)
 providers:
-        #- 'GlassDoor' 
+
+  - 'GlassDoorDynamic'
   - 'Indeed'
-  - 'Monster'
+  # - 'Monster'
+  # - 'GlassDoorStatic'
 
 # filters
 search_terms:
