connected CLI parser, making no changes to args

--- a/jobfunnel/config/settings.yaml
+++ b/jobfunnel/config/settings.yaml
@@ -7,9 +7,9 @@ output_path: 'search'
 
 # providers from which to search (case insensitive)
 providers:
-  - 'GlassDoorStatic'
   - 'Indeed'
-  - 'Monster'
+#  - 'GlassDoorStatic'  # FIXME
+ # - 'Monster'
 
 
 
