getting glassdoor going again

--- a/jobfunnel/resources/default_settings.yaml
+++ b/jobfunnel/resources/default_settings.yaml
@@ -7,9 +7,9 @@ output_path: 'search'
 
 # providers from which to search (case insensitive)
 providers:
-  - 'Indeed'
-#  - 'GlassDoorStatic'  # FIXME
- # - 'Monster'
+ # - 'glassdoor'
+  - 'indeed'
+ # - 'Monster_CANADA_ENG'
 
 
 
