Got GlassDoorStatic going again.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
-include jobfunnel/config/settings.yaml
-include jobfunnel/text/user_agent_list.txt
+include jobfunnel/demo/settings.yaml
+include jobfunnel/resources/user_agent_list.txt
