--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 language: python
 python:
-  - '3.6.9'
+  - '3.8.0'
 install:
+  - 'pip install -e .'
   - 'pip install flake8 pipenv pytest-cov pytest-mock'
-  - 'pipenv sync'
   - 'python -m nltk.downloader stopwords'
-before_script: 'flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics'
+before_script:
+  - 'flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics'
 script:
-  - 'python -m jobfunnel -s demo/settings.yaml'
+  - 'funnel -s demo/settings.yaml'
   - 'pytest --cov=jobfunnel --cov-report=xml'
 after_success:
   - 'bash <(curl -s https://codecov.io/bash)'
