Refactor custom --> inline, resolve more pylint warnings, lower project codecov, clean up more imports, add inter-scraper-validity check, expand config validators

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,6 +1,9 @@
 coverage:
+  # FIXME: Set these back to automatic once we up coverage more
   status:
     patch:
       default:
         target: 30%
-
+    project:
+      default:
+        target: 30%
